# vault-keeper

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  security-scan.yml
vault_keeper/: vault.py
