[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vault-keeper"
version = "0.1.0"
description = "A local-first password manager with encryption and TOTP support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
vault-keeper = "vault_keeper.vault:main"
